--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             text-align: center;
             padding: 50px 20px;
             background-color: #e8e8e8;
+          
         }
         .team-section h2 {
             font-size: 36px;
@@ -104,15 +105,16 @@
             overflow: hidden;
             width: 250px;
             text-align: center;
+          
         }
         .team-member img {
             width: 100%;
-            height: 200px;
+            height: 300px;
             object-fit: cover;
         }
         .team-member h3 {
             font-size: 20px;
-            color: #3A4528;
+            color: #666;
             margin: 15px 0 5px;
         }
         .team-member p {
@@ -147,21 +149,21 @@
         <h2>Meet Our Team</h2>
         <div class="team">
             <div class="team-member">
-                <img src="team1.jpg" alt="Team Member 1">
-                <h3>Jane Doe</h3>
+                <img src="person1.jpeg" alt="Team Member 1">
+                <h3>Claudia Collier</h3>
                 <p>Founder & Lead Designer</p>
             </div>
             <div class="team-member">
-                <img src="team2.jpg" alt="Team Member 2">
-                <h3>John Smith</h3>
+                <img src="person2.jpeg" alt="Team Member 2">
+                <h3>Pablo Harvey</h3>
                 <p>Plant Care Specialist</p>
             </div>
             <div class="team-member">
-                <img src="team3.jpg" alt="Team Member 3">
-                <h3>Emily Johnson</h3>
+                <img src="person3.jpeg" alt="Team Member 3">
+                <h3>Sallie Hodges</h3>
                 <p>Customer Relations Manager</p>
             </div>
         </div>
     </div>
-</body>
+  </body>
 </html>
