--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         /* About Us Section */
         .about-section {
-            background-image: url('green_background.jpeg');
+            background-image: url('bg_1.jpeg');
             background-position: center;
             color: black;
             text-align: center;
@@ -65,7 +65,7 @@
         .mission {
             text-align: center;
             padding: 50px 20px;
-            background-color: #f9f9f9;
+            background-image: url('background_2.jpeg');
         }
         .mission h2 {
             font-size: 36px;
@@ -89,7 +89,6 @@
         .team-section h2 {
             font-size: 36px;
             margin-bottom: 20px;
-            color: #3A4528;
         }
         .team {
             display: flex;
@@ -114,12 +113,10 @@
         }
         .team-member h3 {
             font-size: 20px;
-            color: #666;
             margin: 15px 0 5px;
         }
         .team-member p {
             font-size: 14px;
-            color: #666;
             margin-bottom: 15px;
         }
     </style>
@@ -145,25 +142,32 @@
         <p>To bring the elegance and serenity of nature into every home through beautifully curated floral designs and personalized customer service.</p>
     </div>
 
-    <div class="team-section">
-        <h2>Meet Our Team</h2>
-        <div class="team">
-            <div class="team-member">
-                <img src="person1.jpeg" alt="Team Member 1">
-                <h3>Claudia Collier</h3>
-                <p>Founder & Lead Designer</p>
-            </div>
-            <div class="team-member">
-                <img src="person2.jpeg" alt="Team Member 2">
-                <h3>Pablo Harvey</h3>
-                <p>Plant Care Specialist</p>
-            </div>
-            <div class="team-member">
-                <img src="person3.jpeg" alt="Team Member 3">
-                <h3>Sallie Hodges</h3>
-                <p>Customer Relations Manager</p>
-            </div>
+ <div class="team-section">
+    <h2>Meet Our Team</h2>
+    <div class="team">
+        <div class="team-member">
+            <img src="person1.jpeg" alt="Team Member 1">
+            <h3>Claudia Collier</h3>
+            <p>Founder & Lead Designer</p>
+        </div>
+        <div class="team-member">
+            <img src="person2.jpeg" alt="Team Member 2">
+            <h3>Pablo Harvey</h3>
+            <p>Plant Care Specialist</p>
+        </div>
+        <div class="team-member">
+            <img src="person3.jpeg" alt="Team Member 3">
+            <h3>Sallie Hodges</h3>
+            <p>Customer Relations Manager</p>
+        </div>
+
+      <div class="team-member">
+            <img src="person4.jpeg" alt="Team Member 4">
+            <h3>Timmy Tim</h3>
+            <p>Creative Marketing Specialist</p>
         </div>
     </div>
+</div>
+
   </body>
 </html>
