--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
 
       <div class="team-member">
-            <img src="person4.jpeg" alt="Team Member 4">
+            <img src="creepy_rando.jpeg" alt="Team Member 4">
             <h3>Timmy Tim</h3>
             <p>Creative Marketing Specialist</p>
         </div>
