--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         .team-section h2 {
             font-size: 36px;
             margin-bottom: 20px;
+          margin-top: 10px;
         }
         .team {
             display: flex;
@@ -134,12 +135,12 @@
 
     <div class="about-section">
         <h1>About Enchanted Florals</h1>
-        <p>At Enchanted Florals, we believe in the beauty of nature and the joy it brings to everyday life. Our passion is crafting exquisite bouquets and plant arrangements that brighten your day and your space.</p>
+        <p>At Enchanted Florals, we believe in the beauty of nature and the joy it brings to everyday life. Our passion is creating beautiful bouquets and plant arrangements that brighten your day and your space.</p>
     </div>
 
     <div class="mission">
         <h2>Our Mission</h2>
-        <p>To bring the elegance and serenity of nature into every home through beautifully curated floral designs and personalized customer service.</p>
+        <p> To bring a sort of elegance and serenity of nature into your every home through beautifully curated floral designs and personalized customer service.</p>
     </div>
 
  <div class="team-section">
