--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="bouquet.html">Bouquet Gallery</a></li>
-            <li><a href="plants.html">Plant Gallery</a></li>
+            <li><a href="Workshops.html">Workshops</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
